# badgerd-sdwirec

./: .gitignore  README.md
.github/: release.yml
.github/workflows/: pypi_publish.yaml
sdwirec-hw/: fp-lib-table  panel.kicad_pro  sdwirec.kicad_pcb  sdwirec.kicad_pro  sdwirec.kicad_sch  sdwirec.kicad_sym  sym-lib-table
sdwirec-hw/components/: 503182-1852.dcm  503182-1852.lib  503182-1852.mod  5031821852.kicad_mod  MC74HC1G04DTT1G.dcm  MC74HC1G04DTT1G.lib  MC74HC1G04DTT1G.mod  QFN50P700X700X100-49N-D.kicad_mod  SOT95P275X110-5N.kicad_mod  USB2640-HZH-02.dcm  USB2640-HZH-02.lib  USB2640-HZH-02.mod  badgerd-logo.kicad_mod
sdwirec-hw/sdwirec.pretty/: 5031821852.kicad_mod  QFN50P700X700X100-49N-D.kicad_mod  SOT95P275X110-5N.kicad_mod  badgerd-logo-9mm.kicad_mod  usd.kicad_mod
sdwirec-sw/: AUTHORS  CMakeLists.txt  README
sdwirec-sw-cross/: README.md  pyproject.toml  sdwire.py
sdwirec-sw-cross/src/: sdwire.py
sdwirec-sw/debian/: bash-completion  changelog  control  copyright  manpages  sd-mux-ctrl.postinst  sd-mux-ctrl.udev
sdwirec-sw/doc/man/: sd-mux-ctrl.1
sdwirec-sw/etc/bash_completion.d/: sd-mux-ctrl
sdwirec-sw/packaging/: sd-mux-ctrl.changes  sd-mux-ctrl.spec
sdwirec-sw/src/: CMakeLists.txt  main.cpp
snap/: snapcraft.yaml
